--- a/style.css
+++ b/style.css
@@ -19,19 +19,43 @@
 	clear: both
 }
 
+#pic_select0r {
+	display: flex;
+	gap: 1rem;
+	flex-flow: wrap;
+	margin-bottom: 1rem;
+}
+
 .select0r_pic {
-	float: left;
-	min-height: 64px;
-	cursor: pointer
+	cursor: pointer;
+	width: 5rem;
+	height: 5rem;
 }
 
 input.select0r_pic {
-	margin: 5px;
-}	
+	white-space: normal !important;
+	line-height: 1.3 !important;
+}
+input.select0r_pic.arrow-btn {
+	width: 3rem;
+	height: 3rem;
+	margin: auto 0;
+	font-size: 1.25rem;
+	display: flex;
+	justify-content: center;
+	color: #f6f7f7;
+	background: #2271b1;
+	border: 1px solid #2271b1;
+	border-radius: 5px;
+}
+.default-pic-btn {
+}
 
 .select0r_pic img {
-	padding: 2px;
-	border: 1px solid white;
+	border: 1px solid #bbb;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .select0red_pic img {
